--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mysql2": "^3.14.0",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "uuid": "^9.0.0"
   }
 }
