--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
   "name": "vendor-backend",
   "version": "1.0.0",
-  "description": "USSD backend for vendor portal",
   "main": "ussd.js",
   "scripts": {
-    "start": "node ussd.js"
+    "start": "node ussd.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Theophilus",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "africastalking": "^1.0.5",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "base-64": "^1.0.0",
-    "bcrypt": "^5.1.1",
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "mysql2": "^3.14.0",
-    "nodemailer": "^6.10.0",
-    "uuid": "^9.0.0"
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "mysql2": "^3.9.6",
+    "uuid": "^9.0.1"
   }
 }
